10.To provide full support of ROOT6 one dictionary per go4 library 
   will be created. Exclude dictionary generation for gui classes while
   no libraries with qt classes exists. 
11.Mostly comlete porting to ROOT6 and Qt5.
12.Introdece UserPreLoop() and UserPostLoop() methods in TGo4EventProcessor.
   One can use such methods without creation of specialized analysis class. 
             

Changes in Go4 v4.6.0 (November 2013)
1. Start implementation of new communication interfaces in Go4. Therefore
   change of version number. Aim to make fast 4.6 relase and than 5.0 till
   end of 2013.
2. Start implementing direct channel to DABC. For the moment only optional.
3. With use of DABC classes http server to go4analysis is introduced. 
   Just add "-http 8090" arhguments to start web server, which can deliver 
   all go4 objects to browser! 
4. Also with DABC classes provide possibility to optinally connect with
   DABC master node, which can export go4 data via http server. By this
   data from many go4 analysis can be agregated in the same server!     
5. To get different DABC functionality to go4, one need to compile go4
   with "make withdabc=1" flag. One should use newest dabc version from
   repository.
6. Provide go4 analysis view in web browser like in go4gui. 
7. In analysis Launch Panel one can specify arguemtns to start http server
   or to connect with master DABC application.
8. In Go4ExampleAdvanced show possibility to recreate histograms with different
   ranges. It could be used when only when in running analysis one could decide
   which histograms ranges should be created.
9. In TGo4FitSlot add possibility to clear object. Necessary when old object
   was already destroyed - older TGo4FitSlot::SetObject method tried to cast
   old object. Use it when set histograms or graphs to slot objects.
10.Provide configurable timeout in hotstart script for time when alalysis configuration